Update JavalinProcessorTest.java